# RAG-Gateway

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_SPEC.txt  docker-compose.yml
.notes/: milestone4-research.md
adapter-service/: Dockerfile  pyproject.toml
adapter-service/src/adapter_service/: compiler.py  probes.py  server.py  servicer.py  signer.py
adapter-service/tests/: conftest.py  test_adapter.py
gateway/: Dockerfile  go.mod  go.sum
gateway/cmd/server/: main.go
gateway/config/: config.go
gateway/internal/adapter/: client.go
gateway/internal/audit/: audit.go
gateway/internal/auth/: auth.go  auth_test.go
gateway/internal/circuitbreaker/: circuitbreaker.go  circuitbreaker_test.go
gateway/internal/db/: db.go
gateway/internal/firewall/: firewall.go  firewall_test.go
gateway/internal/handler/: handler.go  handler_test.go
gateway/internal/loramanager/: manager.go  manager_test.go
gateway/internal/middleware/: middleware.go
gateway/internal/policy/: client.go  client_test.go
gateway/internal/proxy/: compile.go  compile_test.go  proxy.go  proxy_test.go
gateway/internal/ratelimit/: ratelimit.go  ratelimit_test.go
gateway/internal/readiness/: readiness.go
gateway/internal/retrieval/: client.go
migrations/: 001_init.sql
pageindex-worker/: Dockerfile  pyproject.toml
pageindex-worker/src/pageindex_worker/: indexer.py  retriever.py  server.py
pageindex-worker/tests/: test_indexer_retriever.py
policy/rego/: adapter.rego  output.rego  retrieval.rego
retrieval/: Dockerfile  go.mod  go.sum
scripts/: gen-proto.sh
(+7 files in other folders)
